--- a/Act_4_Nulos_y_outliers.ipynb
+++ b/Act_4_Nulos_y_outliers.ipynb
@@ -260,12 +260,12 @@
       "cell_type": "code",
       "source": [
         "#convertir a archivo xlsx\n",
-        "Retailers_Sin_Nulos1.to_excel(\"microretailer_actualizado.xlsx\")"
+        "Retailers_Sin_Nulos1.to_excel(\"microretailer_actualizado_Nulos.xlsx\")"
       ],
       "metadata": {
         "id": "KXibqNSFtFEH"
       },
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -273,17 +273,17 @@
       "source": [
         "#descargar archivo filtrado en xlsx\n",
         "from google.colab import files\n",
-        "files.download(\"microretailer_actualizado.xlsx\")"
+        "files.download(\"microretailer_actualizado_Nulos.xlsx\")"
       ],
       "metadata": {
         "id": "g3ldPR1ptL9x",
-        "outputId": "3c9ba09e-6c8c-4c13-953d-37cb37df9968",
+        "outputId": "7e52aa13-0465-4029-b327-a5797ddd695f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -344,7 +344,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_111b4250-c8ae-437f-991e-1038d59e8b9a\", \"Retailers_Sin_Nulos.xlsx\", 106905)"
+              "download(\"download_fd88a3b3-8c12-4e90-8c61-364b4969b3b9\", \"microretailer_actualizado_Nulos.xlsx\", 200636)"
             ]
           },
           "metadata": {}
@@ -1144,12 +1144,12 @@
       "cell_type": "code",
       "source": [
         "#convertir a archivo xlsx\n",
-        "Retailers_Filtrado2.to_excel(\"Retailers_Sin_Outliers.xlsx\")"
+        "Retailers_Filtrado2.to_excel(\"microretailer_actualizado_Sin_Outliers.xlsx\")"
       ],
       "metadata": {
         "id": "CAXUqrQmtmwo"
       },
-      "execution_count": 24,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1157,17 +1157,17 @@
       "source": [
         "#descargar archivo filtrado en xlsx\n",
         "from google.colab import files\n",
-        "files.download(\"Retailers_Sin_Outliers.xlsx\")"
+        "files.download(\"microretailer_actualizado_Sin_Outliers.xlsx\")"
       ],
       "metadata": {
         "id": "FoNGzV2rtxSs",
-        "outputId": "a6c9be07-b8af-4903-8e24-128a65692237",
+        "outputId": "6603cdcf-6b3e-4e98-c179-0724776acb6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1228,7 +1228,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_999603b1-2b6c-4c6c-a169-4e5e7179da38\", \"Retailers_Sin_Outliers.xlsx\", 15913)"
+              "download(\"download_4588be30-1d95-4554-b89f-51e4cd4aa81d\", \"microretailer_actualizado_Sin_Outliers.xlsx\", 36647)"
             ]
           },
           "metadata": {}
